# face_engine

./: .gitignore  CLAUDE.md  README.md  README.rst  fetching.py  pyproject.toml  setup.py
.github/: RELEASE_NOTES.md
.github/workflows/: release.yml
.jules/: bolt.md
benchmarks/: basic_estimator_benchmark.py
docs/source/: apidoc.rst  conf.py  index.rst  quickstart.rst  reference.rst
docs/source/apidoc/: core.rst  implementations.rst  models.rst  tools.rst
docs/source/quickstart/: examples.rst  installation.rst  models.rst
docs/source/reference/: console_scripts.rst  recognition.rst
extra/: benchmark_basic_estimator.py  benchmark_estimator.py  benchmark_predict.py  dataset.py  export_minifasnet.py  tools.py  verify_optimization.py
face_engine/: __init__.py  core.py  exceptions.py  fetching.py  tools.py
face_engine/models/: __init__.py  _onnx.py  basic_estimator.py  dlib_models.py  hog_detector.py  insightface_models.py  linear_predictor.py  minifasnet.py  mmod_detector.py  resnet_embedder.py
fetching/: __init__.py  fetch.py  fetch_models.py
tests/: __init__.py  test_basic_estimator_persistence.py  test_face_engine.py  test_face_engine_models.py  test_face_engine_persistence.py  test_fetching.py  test_inference.py  test_insightface_models_mock.py  test_tools.py  verify_optimization.py
